<resources>
    <string name="app_name">Bunkies</string>
    <string name="lists">Lists</string>
    <string name="budget">Budget</string>
    <string name="messages">Messages</string>
    <string name="calendar">Calendar</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string-array name="budgets">
        <item>Personal</item>
        <item>Household</item>
    </string-array>
    <string name="back"><![CDATA[<-]]></string>
    <string name="forward"><![CDATA[->]]></string>
    <string name="addItem">Add List Item</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="add_roomies">Add Roomies:</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="gunter">Günter</string>
    <string name="chad">Chad</string>
    <string name="theo">Theophania</string>
    <string name="emily">Emily</string>
</resources>
